# Dc-Motorshop-Accessories

./: .gitignore  AGENT.md  BACKEND_PLAN.md  BACKEND_TASKS.md  CHANGELOG.md  CLAUDE.md  DATABASE.md  README.md  SCREENS.md  SUPABASE_SETUP.md  pubspec.yaml  test_db.isar
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/v1/: auth.py  backup.py  business.py  categories.py  dashboard.py  expenses.py  health.py  products.py  router.py  sales.py  (+1 more)
backend/app/core/: clock.py  config.py  database.py  deps.py  errors.py  ids.py  logging.py  middleware.py  money.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  brand.py  business.py  category.py  customer.py  expense.py  expense_category.py  inventory_movement.py  payment.py  product.py  sale.py  sale_item.py  sync_tombstone.py  user.py  workflow_stage.py
backend/app/repositories/: base.py  category_repo.py  product_repo.py
backend/app/schemas/: auth.py  backup.py  base.py  business.py  category.py  common.py  expense.py  product.py  sale.py
backend/app/services/: auth_service.py  backup_service.py  dashboard_service.py  inventory_service.py  product_service.py  sale_service.py  serialization.py  storage_service.py  sync_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_m1_identity_auth.py  0002_m2_categories.py  0003_m3_products_inventory.py  0004_m4_sales.py  0005_m5_expenses.py  0006_m8_sync_tombstones.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_backup.py  test_dashboard.py  test_expenses.py  test_health.py  test_products.py  test_rate_limit.py  test_sales.py  test_sync.py  test_tenant.py
(+134 files in other folders)
